modules/infra/security-groups.tf
resource "aws_security_group" "infra_common_sg" {
  name   = "infra_common_sg"
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "infra-${var.environment}-common-sg"
  }
}
